--- a/en-US/5.data-migration/10.use-sql-statements-migrate-data/2.migration-unit.md
+++ b/en-US/5.data-migration/10.use-sql-statements-migrate-data/2.migration-unit.md
@@ -15,18 +15,14 @@ ALTER SYSTEM MIGRATE UNIT [=] unit_id
     DESTINATION [=] ip_port;
 ```
 
-For more information about the syntax for resource unit migration, see [MIGRATE UNIT](../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/14.migrate-unit.md).
 
-Parameters:
 
 | Parameter | Description |
 | ------- | -------------------------------- |
 | unit_id | The unit ID.  |
 | ip_port | The address of the destination server to which the resource unit is migrated.  |
 
-> **Note**
->
-> You can use the `ALTER SYSTEM CANCEL MIGRATE UNIT` statement to cancel resource unit migration. For more information, see [CANCEL MIGRATE UNIT](../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/4.cancel-migrate-unit.md).
+
 
 ## Examples
 
@@ -68,3 +64,9 @@ Parameters:
    +----------------+-------+----------------+----------+------------------------------+---------+---------+-------------+---------------+----------+----------+-------------+
    3 rows in set
    ```
+
+## More information
+
+* For more information about the syntax for resource unit migration, see [MIGRATE UNIT](../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/14.migrate-unit.md).
+
+* For more information about canceling resource unit migration, see [CANCEL MIGRATE UNIT](../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/2.alter-system/4.cancel-migrate-unit.md).
