--- a/en-US/5.data-migration/10.use-sql-statements-migrate-data/3.use-outfile-statements-to-migrate-data.md
+++ b/en-US/5.data-migration/10.use-sql-statements-migrate-data/3.use-outfile-statements-to-migrate-data.md
@@ -1,6 +1,6 @@
 # Export data by using OUTFILE statements
 
-This topic describes how to use a `SELECT INTO OUTFILE` statement to export data.  The `SELECT INTO OUTFILE` statement allows you to specify the fields to be exported, and is preferred when primary key fields do not need to be exported. You can use this statement in combination with the `LOAD DATA INFILE` statement to facilitate data import and export.
+This topic describes how to use a `SELECT INTO OUTFILE` statement to export data. The `SELECT INTO OUTFILE` statement allows you to specify the fields to be exported, and is preferred when primary key fields do not need to be exported. You can use this statement in combination with the `LOAD DATA INFILE` statement to facilitate data import and export.
 
 ## Background
 
@@ -98,13 +98,13 @@ The following takes exporting data to a local device as an example to describe h
     1. Log on to the OBServer to connect to.
     
         ```bash
-        [xxx@xxx /home/admin]# ssh admin@10.10.10.1
+        [xxx@xxx /home/admin]# ssh admin@xxx.xxx.xxx.xxx
         ```
     
     2. Use the OBClient to connect to the `mysql001` tenant in direct connection mode.
     
         ```bash
-        [admin@xxx /home/admin]# obclient -h10.10.10.1 -P2881 -uroot@mysql001 -p -A
+        [admin@xxx /home/admin]# obclient -hxxx.xxx.xxx.xxx -P2881 -uroot@mysql001 -p -A
         Enter password:
         Welcome to the OceanBase.  Commands end with ; or \g.
         Your OceanBase connection id is 3221493926
