--- a/en-US/5.data-migration/11.bypass-import/1.overview-of-bypass-import.md
+++ b/en-US/5.data-migration/11.bypass-import/1.overview-of-bypass-import.md
@@ -24,7 +24,7 @@ At present, OceanBase Database supports the following statements for bypass impo
 
 Bypass import will write all existing data. If the source table contains a large amount of data but only a small amount of data needs to be imported, bypass import is inappropriate in this case. 
 
-## References
+## More information
 
 * [Import data in bypass mode by using the LOAD DATA statement](2.use-load-data-statement-to-bypass-import-data.md)
 
