--- a/en-US/5.data-migration/4.migrate-data-from-oracle-database-to-oceanbase-database/2.use-datax-to-migrate-data-from-oracle-database-to-oceanbase-database.md
+++ b/en-US/5.data-migration/4.migrate-data-from-oracle-database-to-oceanbase-database/2.use-datax-to-migrate-data-from-oracle-database-to-oceanbase-database.md
@@ -6,7 +6,7 @@ If you use OceanBase Database Enterprise Edition, you can request the internal v
 
 ## Framework design
 
-![DataX](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/1080760461/p338283.png)
+![DataX](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/data-migration/datax-oracle.png)
 
 DataX is an offline data synchronization framework that is designed based on the framework + plug-in architecture. Data source reads and writes are abstracted as the reader and writer plug-ins and are integrated into the entire framework. 
 
@@ -75,7 +75,7 @@ Example:
   }
 }
 ```
-> Notice
+> **Notice**
 >
 > DataX migrates only the data of a table. Therefore, you must create the schema of the table in the destination database in advance. 
 
@@ -118,7 +118,7 @@ You can specify the speed and error record limit in the job parameter settings o
         }
 ```
 
-Parameters
+Parameters:
 
 - `errorLimit`: the limit on the number of error records. When this limit is exceeded, the task is terminated. 
 - `channel`: the concurrency. Technically, a higher concurrency value indicates higher migration performance. In actual operations, you must also consider the read pressure on the source database, network transmission performance, and write performance of the destination database. 
@@ -133,6 +133,9 @@ Decompress the installation package:
 tar zxvf datax.tar.gz
 cd datax
 ```
+The directories are as follows:
+
+```shell
 $tree -L 1 --filelimit 30
 .
 ├── bin
@@ -144,6 +147,7 @@ $tree -L 1 --filelimit 30
 ├── plugin
 ├── script
 └── tmp
+```
 
 The following table describes the directories in the installation package.
 
@@ -215,7 +219,6 @@ Content of the myjob.json configuration file:
 }
 ```
 
-Parameters
 
 | Parameter | Description |
 |----------|--------------------|
@@ -227,7 +230,7 @@ Parameters
 | column | The set of names of columns to be synchronized in the configured table. The values are specified in a JSON array. We recommend that you do not set the column parameter to `['*']`, because this configuration changes when the schema changes. We recommend that you specify specific column names. Column pruning is supported. You can export only the specified columns. Column reordering is supported. You can export columns without following the column order in the table schema. You can specify constants in the MySQL SQL format: ``["id", "`table`", "1", "'bazhen.csy'", "null", "to_char(a + 1)", "2.3" , "true"]``.  </br>**Note** <ul><li>`id` is a regular column name. </li> <li>`table` is the name of the column that includes a reserved word.</li> <li>`1` is an integer constant. </li>  <li>`bazhen.csy` is a string constant. </li> <li>`null` is a null pointer. </li> <li>`to_char(a + 1)` is an expression. </li> <li>`2.3` is a floating point number. </li><li>`true` is a Boolean value. </li></ul></li> <li>Required: Yes.</li> <li>Default value: None.</li></ul> |
 | where | The filter condition. The MySQL reader assembles the specified column, table, and WHERE clause into an SQL statement. Then, the MySQL reader extracts data based on this SQL statement. To synchronize data of the current day, you can specify the WHERE clause as`gmt_create > $bizdate`.<br>  **Notice**</br>You cannot set the WHERE clause to `limit 10`, because `limit` is not a valid WHERE clause of an SQL statement.  A WHERE clause allows you to orderly synchronize the incremental business data. If you do not specify the WHERE clause or do not specify the key or value of the WHERE clause, DataX performs full synchronization.</li><li>Required: No.</li><li>Default value: None.</li></ul> |
 
-After the job configuration file is configured, execute this job. Syntax:
+After the job configuration file is configured, execute this job.
 
 ```shell
 python datax.py ../job/myjob.json
