--- a/en-US/5.data-migration/6.migrate-data-from-db2-luw-database-to-oceanbase-database/1.use-dbcat-to-migrate-db2-luw-table-structure-to-oceanbase-database.md
+++ b/en-US/5.data-migration/6.migrate-data-from-db2-luw-database-to-oceanbase-database/1.use-dbcat-to-migrate-db2-luw-table-structure-to-oceanbase-database.md
@@ -129,7 +129,7 @@ The following example exports the schemas of all objects from the `TESTDB` datab
 bin/dbcat convert -H 100.88.109.129 -P 50001 -udb2inst2 -pdb2inst2 --schema TESTDB -DTESTDB --table bmsql_customer --from db2luw115 --to obmysql32x --all
 ```
 
-Note:
+Notice:
 
 - You do not need to install DBCAT on the database server. You can install it on a server that can be directly connected to the database server. 
 
@@ -182,14 +182,14 @@ $tree ~/output/dbcat-20xx-xx-xx-164533/
 
 DBCAT exports SQL files. You can use the import feature of OceanBase Developer Center (ODC) to import table schemas to OceanBase Database in batches. For more information, see [Batch export and import](https://www.oceanbase.com/docs/enterprise-odc-doc-cn-10000000001033324). 
 
-To import table schemas to a MySQL tenant of OceanBase Database, you can also use the `source` command. Example:
+To import table schemas to a MySQL tenant of OceanBase Database, you can also use the `source` command. For example:
 
 ```sql
 obclient [test]> source TABLE-schema.sql
 Query OK, 0 rows affected (0.044 sec)
 ```
 
-> Notice
+> **Notice**
 >
 > If the SQL files are not in the current directory, you must use an absolute address. 
 
