--- a/en-US/5.data-migration/9.data-migration-between-oceanbase-databases/3.migrate-data-from-oracle-tenant-to-oracle-tenant.md
+++ b/en-US/5.data-migration/9.data-migration-between-oceanbase-databases/3.migrate-data-from-oracle-tenant-to-oracle-tenant.md
@@ -53,7 +53,7 @@ The following table describes the database information that is used in the examp
 | Database information | Example value |
 |-----------------------------------------|---------------|
 | Cluster name | test4000 |
-| IP address of the OceanBase Database Proxy (ODP) host | 10.10.10.1 |
+| IP address of the OceanBase Database Proxy (ODP) host | xxx.xxx.xxx.xxx |
 | ODP port number | 2883 |
 | Password of the root user in the sys tenant | ****** |
 | Source tenant name (Oracle mode) | oracle001 |
@@ -82,11 +82,11 @@ Scenario: Export all supported object definition statements from the `OBDUMPER_U
 
    ```bash
    [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-   $./obdumper -h 10.10.10.1 -P 2883 -u obdumper_user01 -p ****** -c test4000 -t oracle001 -D obdumper_user01 --sys-user root --sys-password ****** --ddl --all -f /home/admin/test_migrate_data/ddl_data
+   $./obdumper -h xxx.xxx.xxx.xxx -P 2883 -u obdumper_user01 -p ****** -c test4000 -t oracle001 -D obdumper_user01 --sys-user root --sys-password ****** --ddl --all -f /home/admin/test_migrate_data/ddl_data
    2022-12-26 18:41:07 [INFO] Parsed args:
    [--ddl] true
    [--file-path] /home/admin/test_migrate_data/ddl_data
-   [--host] 10.10.10.1
+   [--host] xxx.xxx.xxx.xxx
    [--port] 2883
    [--user] obdumper_user01
    [--tenant] oracle001
@@ -195,11 +195,11 @@ Scenario: Import, to the `OBLOADER_USER01` schema of the `oracle002` tenant in t
 
    ```bash
    [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-   $./obloader -h 10.10.10.1 -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t oracle002 -D obloader_user01 --ddl --all -f /home/admin/test_migrate_data/ddl_data
+   $./obloader -h xxx.xxx.xxx.xxx -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t oracle002 -D obloader_user01 --ddl --all -f /home/admin/test_migrate_data/ddl_data
    2022-12-26 18:48:20 [INFO] Parsed args:
    [--ddl] true
    [--file-path] /home/admin/test_migrate_data/ddl_data
-   [--host] 10.10.10.1
+   [--host] xxx.xxx.xxx.xxx
    [--port] 2883
    [--user] obloader_user01
    [--tenant] oracle002
@@ -281,11 +281,11 @@ Scenario: Export all supported object data from the `OBDUMPER_USER01` schema of 
 
    ```bash
    [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-   $./obdumper -h 10.10.10.1 -P 2883 -u obdumper_user01 -p ****** -c test4000 -t oracle001 -D obdumper_user01 --sys-user root --sys-password ****** --csv --table '*' -f /home/admin/test_migrate_data/csv_data
+   $./obdumper -h xxx.xxx.xxx.xxx -P 2883 -u obdumper_user01 -p ****** -c test4000 -t oracle001 -D obdumper_user01 --sys-user root --sys-password ****** --csv --table '*' -f /home/admin/test_migrate_data/csv_data
    2022-12-27 10:02:20 [INFO] Parsed args:
    [--csv] true
    [--file-path] /home/admin/test_migrate_data/csv_data
-   [--host] 10.10.10.1
+   [--host] xxx.xxx.xxx.xxx
    [--port] 2883
    [--user] obdumper_user01
    [--tenant] oracle001
@@ -382,11 +382,11 @@ Scenario: Import, to the `OBLOADER_USER01` schema of the `oracle002` tenant in t
 
    ```bash
    [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-   $./obloader -h 10.10.10.1 -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t oracle002 -D obloader_user01 --csv --table '*' -f /home/admin/test_migrate_data/csv_data
+   $./obloader -h xxx.xxx.xxx.xxx -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t oracle002 -D obloader_user01 --csv --table '*' -f /home/admin/test_migrate_data/csv_data
    2022-12-27 10:10:36 [INFO] Parsed args:
    [--csv] true
    [--file-path] /home/admin/test_migrate_data/csv_data
-   [--host] 10.10.10.1
+   [--host] xxx.xxx.xxx.xxx
    [--port] 2883
    [--user] obloader_user01
    [--tenant] oracle002
