--- a/en-US/5.data-migration/4.migrate-data-from-oracle-database-to-oceanbase-database/1.use-dbcat-to-migrate-data-from-oracle-database-to-oceanbase-database.md
+++ b/en-US/5.data-migration/4.migrate-data-from-oracle-database-to-oceanbase-database/1.use-dbcat-to-migrate-data-from-oracle-database-to-oceanbase-database.md
@@ -13,7 +13,7 @@ The DBCAT installation package is named in the `dbcat-[Version number]-SNAPSHOT.
 
 DBCAT can run only on CentOS, macOS, and Windows. You must first install `JDK 1.8` or later. You can also use `OpenJDK`. Then, specify the environment variable `JAVA_HOME`. 
 
-Example of installing `OpenJDK` in CentOS:
+Here is an example of installing `OpenJDK` in CentOS:
 
 ```bash
 $sudo yum -y install java-1.8.0-openjdk.x86_64
@@ -69,7 +69,7 @@ The following table describes the directories in the installation package.
 
 DBCAT supports online conversion. In other words, DBCAT can directly connect to the source database and export the objects from the database. If you have too many objects (such as 10,000 objects), the export may be slow. 
 
-Export command of DBCAT:
+Here is the export command of DBCAT:
 
 ```bash
 bin/dbcat convert -H<host> -P<port> -u<user> -p<password> -D<database> --service-namex<service-name> --service-id <service-id> --from <from> --to <to> --all
@@ -129,7 +129,7 @@ Run the following command to migrate the schemas of all objects from the test Or
 bin/dbcat convert -H 100.88.xxx.xxx -P 1521 -uxxx -pxxxxxx -D test --service-name xxx --service-id xxx --from oracle12c --to oboracle40 --all
 ```
 
-Notes:
+Notice:
 
 - You do not need to directly install DBCAT on the database host. Instead, you can install it on a host that can directly connect to the database host. 
 
@@ -189,7 +189,7 @@ obclient [test]> source TABLE-schema.sql
 Query OK, 0 rows affected (0.044 sec)
 ```
 
-> Notice
+> **Notice**
 >
 > If the SQL file is not in the current directory, the absolute address of the SQL file is required. 
 
