--- a/en-US/5.data-migration/5.migrate-data-from-oceanbase-database-to-oracle-database/1.use-dbcat-to-migrate-table-structure-from-oracle-database-to-oceanbase-database.md
+++ b/en-US/5.data-migration/5.migrate-data-from-oceanbase-database-to-oracle-database/1.use-dbcat-to-migrate-table-structure-from-oracle-database-to-oceanbase-database.md
@@ -13,7 +13,7 @@ The DBCAT installation package is named in the `dbcat-[Version number]-SNAPSHOT.
 
 DBCAT can run only on CentOS, macOS, and Windows. You must first install `JDK 1.8` or later. You can also use `OpenJDK`. Then, specify the environment variable `JAVA_HOME`. 
 
-Example of installing `OpenJDK` in CentOS:
+Here is an example of installing `OpenJDK` in CentOS:
 
 ```bash
 $sudo yum -y install java-1.8.0-openjdk.x86_64
@@ -69,7 +69,7 @@ The following table describes the directories in the installation package.
 
 DBCAT supports online conversion. In other words, DBCAT can directly connect to the source database and export the objects from the database. If you have too many objects (such as 10,000 objects), the export may be slow. 
 
-Export command of DBCAT:
+Here is the export command of DBCAT:
 
 ```bash
 bin/dbcat convert -H<host> -P<port> -u<user> -p<password>  -D <database> --from <from> --to <to> --table '*' 
@@ -128,7 +128,7 @@ Run the following command to migrate all schemas from the test database in an Or
 bin/dbcat convert -H 172.30.xxx.xxx  -P 2883 -uroot -pxxxxx -D test --from oboracle40 --to oracle12c --table '*' 
 ```
 
-Notes:
+Notice:
 
 - You do not need to directly install DBCAT on the database host. Instead, you can install it on a host that can directly connect to the database host. 
 - In the command, the --from and --to options respectively specify the source and destination database types, which must contain the database version number. The following table describes the source and destination databases supported by DBCAT.
@@ -185,7 +185,7 @@ SQL> @TABLE-schema.sql
 Query OK, 0 rows affected (0.044 sec)
 ```
 
-> Notice
+> **Notice**
 >
 > If the SQL file is not in the current directory, the absolute address of the SQL file is required. 
 
