--- a/en-US/5.data-migration/7.migrate-data-from-csv-file-to-oceanbase-database/1.use-datax-to-load-csv-data-files-to-oceanbase-database.md
+++ b/en-US/5.data-migration/7.migrate-data-from-csv-file-to-oceanbase-database/1.use-datax-to-load-csv-data-files-to-oceanbase-database.md
@@ -73,7 +73,7 @@ Example:
   }
 }
 ```
-> Notice
+> **Notice**
 >
 > DataX migrates only table data. You need to create the corresponding table schema in the destination database in advance. 
 
@@ -116,7 +116,7 @@ You can use the `setting` parameter in the `job` directory of DataX to specify t
         }
 ```
 
-Parameters
+Parameters:
 
 - `errorLimit` specifies the maximum number of erroneous records allowed for the task. If this limit is exceeded, the task is interrupted and exits. 
 - `channel` specifies the concurrency. Theoretically, the migration performance increases with the concurrency. However, in practice, you need to consider the read pressure on the source side, network transmission performance, and write performance on the destination side. 
@@ -218,7 +218,6 @@ The `myjob.json` configuration file is as follows:
 
 ```
 
-Parameters
 
 | Parameter | Description |
 |----------|--------------------|
@@ -230,7 +229,7 @@ Parameters
 | column | The set of names of columns to be synchronized in the configured table. The values are specified in a JSON array. We recommend that you do not set columns to `['*']`, because the configuration changes with the table schema. We recommend that you specify the column names instead.  Column pruning is supported. You can export only the specified columns. Column reordering is supported. You can export columns without following the column order in the table schema. You can specify constants in the MySQL SQL format: ``["id", "`table`", "1", "'bazhen.csy'", "null", "to_char(a + 1)", "2.3" , "true"]``.  **</br>Note** <ul><li>`id` is a regular column name. </li> <li>`table` is the name of the column that includes a reserved word.</li> <li>`1` is an integral constant. </li>  <li>`bazhen.csy` is a string constant. </li> <li>`null` is a null pointer. </li> <li>`to_char(a + 1)` is an expression. </li> <li>`2.3` is a floating-point number. </li><li>`true` is a Boolean value. </li></ul></li> <li>Required: Yes.</li> <li>Default value: None.</li></ul> |
 | where | The filter condition. The MySQL reader assembles the specified column, table, and WHERE clause into an SQL statement. Then, the MySQL reader extracts data based on this SQL statement. To synchronize data of the current day, you can specify the WHERE clause as`gmt_create > $bizdate`.<br>  **Notice**</br>You cannot set the WHERE clause to `limit 10`, because `limit` is not a valid WHERE clause of an SQL statement.  A WHERE clause allows you to orderly synchronize the incremental business data. If you do not specify the WHERE clause or do not specify the key or value of the WHERE clause, DataX performs full synchronization. </li><li>Required: No.</li><li>Default value: None.</li></ul> |
 
-After you configure the job file, execute the job. Syntax:
+After you configure the job file, execute the job.
 
 ```shell
 python datax.py ../job/myjob.json
