--- a/en-US/5.data-migration/8.migrate-data-from-sql-file-to-oceanbase-database.md
+++ b/en-US/5.data-migration/8.migrate-data-from-sql-file-to-oceanbase-database.md
@@ -136,10 +136,10 @@ The following section describes how to use web ODC to import data.
    * **Execution Mode**: You can select **Execute immediately** or **Timed execution**.
    * **Sys Tenant Account Settings**: After you specify the account and password, click **Test Connection** next to the password field to verify whether the account information is valid. By default, the account for the connection settings is automatically filled in. If the connection fails, we recommend that you change the password for this export.
 
-   <main id="notice" type='notice'>
-    <h4>Notice</h4>
-    <p>The account and password of the sys tenant are the account and password of a user in a cluster tenant. Do not enter "@sys#cluster" in the Account field. </p>
-   </main>
+      <main id="notice" type='notice'>
+      <h4>Notice</h4>
+      <p>The account and password of the sys tenant are the account and password of a user in a cluster tenant. Do not enter "@sys#cluster" in the Account field. </p>
+      </main>
 
     * After you complete the configurations, click **Submit**.
     
@@ -180,7 +180,7 @@ The following table describes the database information that is used in the examp
 | Database information | Example value |
 |----------------------------------------|--------------|
 | Cluster name | test4000 |
-| IP address of the OceanBase Database Proxy (ODP) host | 10.10.10.1 |
+| IP address of the OceanBase Database Proxy (ODP) host | xxx.xxx.xxx.1 |
 | ODP port number | 2883 |
 | Business tenant name | mysql001 |
 | Password of the root user in the sys tenant | ****** |
@@ -220,9 +220,9 @@ Sample statement:
 
    ```bash
    [root@xxx /home/admin/ob-loader-dumper-3.3.2-SNAPSHOT/bin]
-   $./obloader -h 10.10.10.1 -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t mysql001 -D test_data --ddl --all -f /home/admin/test_sql
+   $./obloader -h xxx.xxx.xxx.1 -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t mysql001 -D test_data --ddl --all -f /home/admin/test_sql
    2022-12-01 07:11:32 [INFO] Parsed args:
-   [--host] 10.10.10.1
+   [--host] xxx.xxx.xxx.1
    [--port] 2883
    [--user] obloader_user01
    [--tenant] mysql001
@@ -309,9 +309,9 @@ Sample statement:
 
    ```bash
    [root@xxx /home/admin/ob-loader-dumper-3.3.2-SNAPSHOT/bin]
-   $./obloader -h 10.10.10.1 -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t mysql001 -D test_data --sql --all -f /home/admin/test_sql
+   $./obloader -h xxx.xxx.xxx.1 -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t mysql001 -D test_data --sql --all -f /home/admin/test_sql
    2022-12-01 07:17:39 [INFO] Parsed args:
-   [--host] 10.10.10.1
+   [--host] xxx.xxx.xxx.1
    [--port] 2883
    [--user] obloader_user01
    [--tenant] mysql001
