--- a/en-US/5.data-migration/9.data-migration-between-oceanbase-databases/1.migrate-data-from-mysql-tenant-to-mysql-tenant.md
+++ b/en-US/5.data-migration/9.data-migration-between-oceanbase-databases/1.migrate-data-from-mysql-tenant-to-mysql-tenant.md
@@ -53,7 +53,7 @@ The following table describes the database information that is used in the examp
 | Database information | Example value |
 |-----------------------------------------|---------------|
 | Cluster name | test4000 |
-| IP address of the OceanBase Database Proxy (ODP) host | 10.10.10.1 |
+| IP address of the OceanBase Database Proxy (ODP) host | xxx.xxx.xxx.xxx |
 | ODP port number | 2883 |
 | Password of the root user in the sys tenant | ****** |
 | Source tenant name (MySQL mode) | mysql001 |
@@ -82,11 +82,11 @@ Scenario: Export all supported object definition statements from the `test_data`
 
    ```bash
    [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-   $./obdumper -h 10.10.10.1 -P 2883 -u obdumper_user01 -p ****** -c test4000 -t mysql001 -D test_data --sys-user root --sys-password ****** --ddl --all -f /home/admin/test_migrate_data/ddl_data
+   $./obdumper -h xxx.xxx.xxx.xxx -P 2883 -u obdumper_user01 -p ****** -c test4000 -t mysql001 -D test_data --sys-user root --sys-password ****** --ddl --all -f /home/admin/test_migrate_data/ddl_data
    2022-12-26 14:11:57 [INFO] Parsed args:
    [--ddl] true
    [--file-path] /home/admin/test_migrate_data/ddl_data
-   [--host] 10.10.10.1
+   [--host] xxx.xxx.xxx.xxx
    [--port] 2883
    [--user] obdumper_user01
    [--tenant] mysql001
@@ -198,11 +198,11 @@ Sample statement:
 
 ```bash
 [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-$./obloader -h 10.10.10.1 -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t mysql002 -D test_data --ddl --all -f /home/admin/test_migrate_data/ddl_data
+$./obloader -h xxx.xxx.xxx.xxx -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t mysql002 -D test_data --ddl --all -f /home/admin/test_migrate_data/ddl_data
 2022-12-26 14:31:47 [INFO] Parsed args:
 [--ddl] true
 [--file-path] /home/admin/test_migrate_data/ddl_data
-[--host] 10.10.10.1
+[--host] xxx.xxx.xxx.xxx
 [--port] 2883
 [--user] obloader_user01
 [--tenant] mysql002
@@ -269,11 +269,11 @@ Scenario: Export all supported object data from the `test_data` schema of the `m
 
    ```bash
    [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-   $./obdumper -h 10.10.10.1 -P 2883 -u obdumper_user01 -p ****** -c test4000 -t mysql001 -D test_data --sys-user root --sys-password ****** --csv --table '*' -f /home/admin/test_migrate_data/csv_data
+   $./obdumper -h xxx.xxx.xxx.xxx -P 2883 -u obdumper_user01 -p ****** -c test4000 -t mysql001 -D test_data --sys-user root --sys-password ****** --csv --table '*' -f /home/admin/test_migrate_data/csv_data
    2022-12-26 14:51:18 [INFO] Parsed args:
    [--csv] true
    [--file-path] /home/admin/test_migrate_data/csv_data
-   [--host] 10.10.10.1
+   [--host] xxx.xxx.xxx.xxx
    [--port] 2883
    [--user] obdumper_user01
    [--tenant] mysql001
@@ -368,11 +368,11 @@ Sample statement:
 
 ```bash
 [xxx@xxx /ob-loader-dumper-4.0.0-RELEASE/bin]
-$./obloader -h 10.10.10.1 -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t mysql002 -D test_data --csv --table '*' -f /home/admin/test_migrate_data/csv_data
+$./obloader -h xxx.xxx.xxx.xxx -P 2883 -u obloader_user01 -p ****** --sys-user root --sys-password ****** -c test4000 -t mysql002 -D test_data --csv --table '*' -f /home/admin/test_migrate_data/csv_data
 2022-12-26 14:52:55 [INFO] Parsed args:
 [--csv] true
 [--file-path] /home/admin/test_migrate_data/csv_data
-[--host] 10.10.10.1
+[--host] xxx.xxx.xxx.xxx
 [--port] 2883
 [--user] obloader_user01
 [--tenant] mysql002
